# avian_fdm

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: release-drafter.yml
.github/actions/rust-setup/: action.yml
.github/workflows/: autolabeler.yml  ci.yml
avian_fdm_j3cub_jsbsim/: Cargo.toml  README.md
avian_fdm_j3cub_jsbsim/assets/usa35b/: README.md  usa35b_polars.csv
avian_fdm_j3cub_jsbsim/examples/: j3cub_minimal.rs  j3cub_visual.rs
avian_fdm_j3cub_jsbsim/src/: airfoils.rs  lib.rs
avian_fdm_j3cub_jsbsim/src/presets/: j3cub.rs
avian_fdm_j3cub_jsbsim/tests/: jsbsim_comparison.rs  run_jsbsim_glide.py
avian_fdm_j3cub_jsbsim/tests/fixtures/: jsbsim_j3cub_glide_60s.csv
benches/: fdm_hot_path.rs
examples/: j3cub_minimal.rs  j3cub_visual.rs
src/: aerodynamics.rs  atmosphere.rs  debug.rs  detach.rs  kinematics.rs  lib.rs  math.rs  plugin.rs  propulsion.rs  systems.rs  zone_aggregation.rs
src/aerodynamics/: coefficients.rs  damping.rs  engine_coupling.rs  induced_drag.rs  local_angles.rs  mod.rs  world_forces.rs
src/airfoil/: foil_tools.rs  library.rs  mod.rs  plugin.rs  types.rs
src/atmosphere/: isa.rs  mod.rs  model.rs  resources.rs  systems.rs
src/components/: aero_coeff.rs  aero_zone.rs  aircraft.rs  controls.rs  damageable.rs  engine.rs  engine_zone.rs  failure.rs  flight_state.rs  gizmo_shape.rs  mod.rs  zone_force.rs
src/components/aero_coeff/: interpolation.rs  mod.rs  types.rs  validation.rs  viterna.rs
src/debug_render/: colliders.rs  configuration.rs  gizmo_shape.rs  gizmos.rs  mod.rs
src/presets/: j3cub.rs  mod.rs
src/propulsion/: engine_zone.rs  mod.rs  throttle.rs  thrust.rs
tests/: README.md  airfoil_resolve.rs  jsbsim_comparison.rs  perf_limits.rs  plank.rs  run_jsbsim.py  run_jsbsim_glide.py
tests/fixtures/: jsbsim_j3cub_60s.csv
