[package]
name = "avian_fdm"
version = "0.1.0"
edition = "2021"
description = "6-DoF Flight Dynamics Model for Bevy + Avian 0.6"
license = "LGPL-2.1-or-later"
exclude = ["/assets/", "/docs/", "/.github/"]

[workspace]
members = [".", "avian_fdm_j3cub_jsbsim"]

[features]
# Enable the avian3d f32 backend and collider shapes (Collider::cuboid, etc.).
# Users who write their own aircraft and want f64 precision should omit this
# feature and enable `avian3d/f64` + `avian3d/parry-f64` on their own avian3d dep.
f32 = ["avian3d/default-collider", "avian3d/f32", "avian3d/parry-f32"]
debug-plugin = ["dep:bevy_color", "dep:bevy_gizmos", "avian3d/f32", "avian3d/parry-f32"]

[dependencies]
# collider-from-mesh is excluded: avian_fdm uses only analytic shapes (boxes, spheres,
# capsules) for AeroZone colliders. Mesh-based colliders would require AssetPlugin +
# MeshPlugin in headless apps, and are never needed for a flight dynamics library.
avian3d = { version = "0.6", default-features = false, features = [
    "3d",
] }
bevy_app     = { version = "0.18", default-features = false }
bevy_ecs     = { version = "0.18", default-features = false }
bevy_math    = { version = "0.18", default-features = false }
bevy_transform = { version = "0.18", default-features = false }
bevy_reflect = { version = "0.18", default-features = false }
bevy_color   = { version = "0.18", default-features = false, optional = true }
bevy_gizmos  = { version = "0.18", default-features = false, optional = true }
bevy_log     = { version = "0.18", default-features = false }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
bevy = { version = "0.18", features = [
    "bevy_winit",
    "bevy_pbr",
    "bevy_gizmos",
] }

[[test]]
name = "perf_limits"
required-features = ["f32"]
