[package]
name = "avian_fdm"
version = "0.1.0"
edition = "2021"
description = "6-DoF Flight Dynamics Model for Bevy + Avian 0.6"
license = "LGPL-3.0-or-later"
authors = ["Víctor Cuadrado Juan <me@viccuad.me>"]
repository = "https://github.com/viccuad/avian_fdm"
homepage = "https://github.com/viccuad/avian_fdm"
documentation = "https://docs.rs/avian_fdm"
readme = "README.md"
keywords = ["bevy", "avian", "fdm", "flight", "simulation"]
categories = ["game-development", "simulation", "science"]
exclude = ["/.github/"]

[workspace]
members = [".", "avian_fdm_j3cub_jsbsim"]

[features]
default = ["f32", "debug-plugin"]
# Exactly one of `f32` or `f64` must be enabled. They select the avian3d physics
# backend and are mutually exclusive: enabling both is a compile error.
#
# `f32` — standard Bevy/avian3d precision. Sufficient for most flight simulators
#          and required for integration with Bevy rendering (Transform, Gizmos, etc.).
#
# `f64` — double-precision backend. Use when simulation accuracy matters more than
#          Bevy rendering integration, e.g. pure headless FDM or large-world sims.
f32 = ["avian3d/default-collider", "avian3d/f32", "avian3d/parry-f32"]
f64 = ["avian3d/default-collider", "avian3d/f64", "avian3d/parry-f64"]
debug-plugin = [
    "dep:bevy_color",
    "dep:bevy_gizmos",
    "avian3d/f32",
    "avian3d/parry-f32",
]

[dependencies]
# collider-from-mesh is excluded: avian_fdm uses only analytic shapes (boxes, spheres,
# capsules) for AeroZone colliders. Mesh-based colliders would require AssetPlugin +
# MeshPlugin in headless apps, and are never needed for a flight dynamics library.
avian3d = { version = "0.6", default-features = false, features = ["3d"] }
bevy_app = { version = "0.18", default-features = false }
bevy_ecs = { version = "0.18", default-features = false }
bevy_math = { version = "0.18", default-features = false }
bevy_transform = { version = "0.18", default-features = false }
bevy_reflect = { version = "0.18", default-features = false }
bevy_color = { version = "0.18", default-features = false, optional = true }
bevy_gizmos = { version = "0.18", default-features = false, optional = true }
bevy_log = { version = "0.18", default-features = false }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
bevy = { version = "0.18", features = [
    "bevy_winit",
    "bevy_pbr",
    "bevy_gizmos",
] }

[[test]]
name = "perf_limits"
required-features = ["f32"]

[package.metadata.docs.rs]
features = ["f32", "debug-plugin"] # same as [features]
rustdoc-args = [
    "--cfg",
    "docsrs",
] # activates any #[cfg_attr(docsrs, doc(cfg(...)))] annotations
